handle universal link

--- a/ReferHelper/ReferHelper/Main.storyboard
+++ b/ReferHelper/ReferHelper/Main.storyboard
@@ -180,6 +180,10 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="lb4-53-v0H"/>
                     </view>
+                    <connections>
+                        <outlet property="email" destination="x7y-Ll-LGf" id="cpM-iZ-VDu"/>
+                        <segue destination="3rX-Ur-eGE" kind="show" identifier="signupNext" id="KHS-Po-poQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ilO-Yg-lTo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -250,6 +254,36 @@
             </objects>
             <point key="canvasLocation" x="2764" y="465.51724137931041"/>
         </scene>
+        <!--Create Account-->
+        <scene sceneID="aOV-iC-CvC">
+            <objects>
+                <viewController storyboardIdentifier="CreateAccount" useStoryboardIdentifierAsRestorationIdentifier="YES" id="3rX-Ur-eGE" customClass="CreateAccount" customModule="ReferHelper" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="QHA-61-cPN">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Verification instruction sent" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sD1-OK-mUx">
+                                <rect key="frame" x="69" y="188" width="236" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="sD1-OK-mUx" firstAttribute="centerX" secondItem="JED-cv-S6N" secondAttribute="centerX" id="0P8-kr-bi7"/>
+                            <constraint firstItem="sD1-OK-mUx" firstAttribute="top" secondItem="JED-cv-S6N" secondAttribute="top" constant="100" id="M6z-et-mkz"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="JED-cv-S6N"/>
+                    </view>
+                    <connections>
+                        <outlet property="VerifyMessage" destination="sD1-OK-mUx" id="eOG-7Y-6Wz"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mxE-JG-xqm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3702" y="-562"/>
+        </scene>
         <!--Applicant-->
         <scene sceneID="18N-5Q-wtB">
             <objects>
@@ -265,6 +299,30 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F5E-mr-ptN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4817" y="-600"/>
+        </scene>
+        <!--Create Account-->
+        <scene sceneID="bIx-Tu-PRL">
+            <objects>
+                <viewController storyboardIdentifier="SignupForm" useStoryboardIdentifierAsRestorationIdentifier="YES" id="M6v-aA-rgj" customClass="CreateAccount" customModule="ReferHelper" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pdt-Ex-MWj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xP8-wc-RZM">
+                                <rect key="frame" x="167" y="115" width="41" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="g9h-6b-ZAM"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EAc-4R-DIB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3702" y="-1232"/>
         </scene>
         <!--Dashboard-->
         <scene sceneID="9TA-ll-Ejz">
