--- a/ReferHelper/ReferHelper/Storyboards/Main.storyboard
+++ b/ReferHelper/ReferHelper/Storyboards/Main.storyboard
@@ -481,7 +481,7 @@
                     <connections>
                         <segue destination="g4B-mR-nlh" kind="relationship" relationship="viewControllers" id="GXz-Gw-g0B"/>
                         <segue destination="UDP-11-gFc" kind="relationship" relationship="viewControllers" id="S0O-dj-Cw7"/>
-                        <segue destination="PnY-PU-F88" kind="relationship" relationship="viewControllers" id="H41-wM-qrS"/>
+                        <segue destination="Pg5-SE-hIC" kind="relationship" relationship="viewControllers" id="H41-wM-qrS"/>
                         <segue destination="yOC-Qw-leZ" kind="relationship" relationship="viewControllers" id="CTc-JH-vIu"/>
                     </connections>
                 </tabBarController>
@@ -489,21 +489,15 @@
             </objects>
             <point key="canvasLocation" x="3702" y="730"/>
         </scene>
-        <!--Refer-->
+        <!--Refer Root View Controller-->
         <scene sceneID="nVi-sI-bFi">
             <objects>
-                <viewController id="PnY-PU-F88" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="nhM-M8-6lc">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="axW-QV-zZA"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Refer" image="nav-guardian" id="ieR-k0-0cD"/>
+                <viewController id="PnY-PU-F88" customClass="ReferRootViewController" customModule="ReferHelper" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="UZD-w8-VAE"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U3m-uV-6K7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4817" y="66"/>
+            <point key="canvasLocation" x="5756" y="65.217391304347828"/>
         </scene>
         <!--Profile-->
         <scene sceneID="uY0-U2-hbV">
@@ -543,10 +537,10 @@
             </objects>
             <point key="canvasLocation" x="4817" y="730"/>
         </scene>
-        <!--Welcome View Controller-->
+        <!--Welcome Navigation Controller-->
         <scene sceneID="GMF-aH-LyU">
             <objects>
-                <navigationController storyboardIdentifier="Welcome" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="2ER-10-ZTj" customClass="WelcomeViewController" customModule="ReferHelper" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="Welcome" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="2ER-10-ZTj" customClass="WelcomeNavigationController" customModule="ReferHelper" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="OtY-wE-jut">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -560,6 +554,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O0S-rB-eSs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="295" y="134"/>
+        </scene>
+        <!--Refer-->
+        <scene sceneID="PgL-5L-Wq0">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Pg5-SE-hIC" customClass="ReferNavigationController" customModule="ReferHelper" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Refer" image="nav-guardian" id="ieR-k0-0cD"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dJb-Um-Aba" customClass="NavigationBar" customModule="Material">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="PnY-PU-F88" kind="relationship" relationship="rootViewController" id="eRa-RQ-F1x"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gmN-Ve-vku" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4816.8000000000002" y="65.217391304347828"/>
         </scene>
     </scenes>
     <resources>
